# eshop_app

./: .gitignore  .local.env  README.md  config.py  manage.py  pyproject.toml
E_shop_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
E_shop_app/settings/: base.py  local.py  prod.py
cart/: cart.py  context_processors.py  forms.py  views.py
cart/templates/cart/: detail.html
djangoProject/: settings.py
orders/: admin.py  models.py  tasks.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/admin/orders/order/: detail.html
orders/templates/orders/order/: create.html  created.html  pdf.html
payment/: urls.py  views.py  webhooks.py
payment/templates/payment/: canceled.html  completed.html  process.html
shop/: admin.py  models.py  resources.py  urls.py  views.py
shop/migrations/: 0001_initial.py
shop/static/css/: base.css
templates/shop/: base.html
templates/shop/product/: detail.html  list.html
